# owolib

./: .env  main.py  owolib.py  pyproject.toml  test.py
.github/workflows/: python-tests.yml
src/owolib/: .env  owolib.py
