[build-system]
requires = ["hatchling >= 1.26"]
build-backend = "hatchling.build"

[project]
name = "owolib"
version = "2025.0.0a1"
authors = [
    {name = "Carl Johann Stempel", email = "carljohann@robotik.ag"},
]
maintainers = [
    {name = "Carl Johann Stempel", email = "carljohann@robotik.ag"},
]
description = "OwOlib is a library with some random functions i use often. It is mainly used by my scripts"
readme = {file = "README.txt", content-type = "text/markdown"}
license = "GNU General Public License v3.0"
license-files = ["LICENSE"]
keywords = ["lib", "library", "utils", "util", "utility", "owo", "owolib", "owolibrary"]
classifiers = [
  # How mature is this project? Common values are
  #   3 - Alpha
  #   4 - Beta
  #   5 - Production/Stable
  "Development Status :: 3 - Alpha",

  # Indicate who your project is intended for
  "Intended Audience :: Developers",

  # Specify the Python versions you support here.
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.6",
  "Programming Language :: Python :: 3.7",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
]
[project.urls]
Repository = "https://github.com/"